# Guiding-Light-code

./: .gitignore  .gitmodules  100_to_0.sh  CMakeLists.txt  Dockerfile  README.md  conv_db.sh  create_files.sh  init_db.sh  select.sh  temp.json  us_to_sp.sh
additional/: random_responses.json  responses.hfg  slashcommands.hfg
cmake/: FindDPP.cmake
http_server/: CMakeLists.txt  README.md
http_server/cmake/: FindDPPTGG.cmake  FindFMT.cmake  FindHenifig.cmake
http_server/include/http_server/: topgg_listener.hpp
http_server/resources/F2/: .redirect.hfg
http_server/resources/dpptgg/: .redirect.hfg
http_server/resources/guidinglight/: .redirect.hfg
http_server/resources/guidinglight/topgg/: .redirect
http_server/resources/henifig/: .redirect.hfg
http_server/src/: main.cpp
include/: channels_get.h  cli.h  commands.h  config_values.h  configuration.h  create_invite.h  database.h  exception.h  file_namespace.h  jtc_defaults.h  jtc_vc.h  launch_options.h  logging.h  notification_channel.h  slash_funcs.h  string_convert.h  temp_vc.h  temp_vc_handler.h  ticket.h  ticket_handler.h  topgg.h
include/guidingLight/: guiding_light.h
include/guiding_light/: atomic.hpp  cfg.hpp  cli.hpp  commands.hpp  commands.tpp  config_values.hpp  configuration.hpp  database.hpp  exception.hpp  guiding_light.hpp  jtc_defaults.hpp  jtc_vc.hpp  launch_options.hpp  logging.hpp  notification_channel.hpp  ping.hpp  ratelimit.hpp  reponses.hpp  responses.hpp  signal.hpp  slash_funcs.hpp  temp_vc.hpp  temp_vc_handler.hpp  ticket.hpp  ticket_handler.hpp  topgg.hpp
include/guiding_light/helpers/: hmac_sha256.hpp
include/no_warns/: sqlite.hpp
include/no_warns/dpp/: dpp.h
src/: jtc_default_values.txt  jtc_vcs.txt  main.cpp  temp_vc_notifications.txt
src/dev/: no_noguild_reminder.txt  topgg_guild_choices.txt  topgg_guild_votes_amount.txt  topgg_notifications.txt
src/lib/: cfg.cpp  channels_get.cpp  cli.cpp  commands.cpp  confg_values.cpp  configuration.cpp  create_invite.cpp  database.cpp  exception.cpp  file_namespace.cpp  guiding_light.cpp  json.json  jtc_defaults.cpp  jtc_vc.cpp  launch_options.cpp  logging.cpp  notification_channel.cpp  ping.cpp  ratelimit.cpp  reponses.cpp  responses.cpp  signal.cpp  slash_funcs.cpp  string_convert.cpp  temp_vc.cpp  temp_vc_handler.cpp  ticket.cpp  ticket_handler.cpp  topgg.cpp
src/lib/guidingLight/: guiding_light.cpp
src/lib/helpers/: hmac_sha256.cpp
src/release/: topgg_guild_votes_amount.txt
